--- a/app.json
+++ b/app.json
@@ -6,7 +6,7 @@
   "window":{
     "backgroundTextStyle":"light",
     "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "小猴偷米2",
+    "navigationBarTitleText": "小猴偷米",
     "navigationBarTextStyle":"black"
   }
 }
