--- a/app.json
+++ b/app.json
@@ -5,7 +5,7 @@
   "window":{
     "backgroundTextStyle":"dark",
     "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "小猴偷米",
+    "navigationBarTitleText": "小猴偷米2",
     "navigationBarTextStyle":"black"
   }
 }
