--- a/app.json
+++ b/app.json
@@ -1,11 +1,13 @@
 {
-  "pages":[
-    "pages/index/index"
+  "pages": [
+    "pages/index/index",
+    "pages/user/user"
   ],
-  "window":{
-    "backgroundTextStyle":"dark",
-    "navigationBarBackgroundColor": "#fff",
+  "window": {
+    "backgroundColor": "#fff",
+    "backgroundTextStyle": "dark",
+    "navigationBarBackgroundColor": "#00abd4",
     "navigationBarTitleText": "小猴偷米2",
-    "navigationBarTextStyle":"black"
+    "navigationBarTextStyle": "white"
   }
 }
