--- a/app.json
+++ b/app.json
@@ -1,7 +1,6 @@
 {
   "pages": [
-    "pages/index/index",
-    "pages/user/user"
+    "pages/index/index"
   ],
   "window": {
     "backgroundColor": "#fff",
