--- a/app.json
+++ b/app.json
@@ -6,7 +6,7 @@
     "backgroundColor": "#ffffff",
     "backgroundTextStyle": "dark",
     "navigationBarBackgroundColor": "#ffffff",
-    "navigationBarTitleText": "小猴偷米 - 小Q定制版",
+    "navigationBarTitleText": "召唤小猴",
     "navigationBarTextStyle": "black"
   }
 }
