--- a/app.json
+++ b/app.json
@@ -8,8 +8,7 @@
     "pages/busDetail/busDetail",
     "pages/bindLibrary/bindLibrary",
     "pages/login/login",
-    "pages/oldBus/oldBus",
-    "pages/dormitory/dormitory"
+    "pages/oldBus/oldBus"
   ],
   "window": {
     "backgroundColor": "#ffffff",
