--- a/app.json
+++ b/app.json
@@ -8,7 +8,7 @@
     "pages/busDetail/busDetail",
     "pages/bindLibrary/bindLibrary",
     "pages/login/login",
-    "pages/oldBus/oldBus"
+    "pages/emptyRoom/emptyRoom"
   ],
   "window": {
     "backgroundColor": "#ffffff",
