--- a/project.config.json
+++ b/project.config.json
@@ -12,12 +12,19 @@
 	"projectname": "Herald_Weixin",
 	"condition": {
 		"weapp": {
-			"current": 0,
+			"current": -1,
 			"list": [
 				{
 					"id": -1,
 					"name": "日程",
-					"pathName": "pages/fullSchedule/fullSchedule"
+					"pathName": "pages/fullSchedule/fullSchedule",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "实时班车",
+					"pathName": "pages/instantBus/instantBus",
+					"query": ""
 				}
 			]
 		},
