各种更新合推一下

--- a/app.json
+++ b/app.json
@@ -12,7 +12,8 @@
     "pages/emptyRoom/emptyRoom",
     "pages/notices/notices",
     "pages/activity/activity",
-    "pages/curriculumPreview/curriculumPreview"
+    "pages/curriculumPreview/curriculumPreview",
+    "pages/calculateGpa/calculateGpa"
   ],
   "window": {
     "backgroundColor": "#ffffff",
