临时加个私货室内定位

--- a/app.json
+++ b/app.json
@@ -1,6 +1,7 @@
 {
   "pages": [
-    "pages/index/index"
+    "pages/index/index",
+    "pages/location/location"
   ],
   "window": {
     "backgroundColor": "#f0f0f0",
