--- a/project.config.json
+++ b/project.config.json
@@ -1,7 +1,7 @@
 {
 	"description": "项目配置文件。",
 	"setting": {
-		"urlCheck": false,
+		"urlCheck": true,
 		"es6": true,
 		"postcss": true,
 		"minified": true,
@@ -28,8 +28,13 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": -1,
+			"current": 0,
 			"list": [
+				{
+					"id": -1,
+					"name": "室内定位",
+					"pathName": "pages/location/location"
+				}
 			]
 		}
 	}
